[gd_scene load_steps=3 format=3 uid="uid://delebic3jhjcf"]

[ext_resource type="Script" uid="uid://c3ulf802qt22r" path="res://assets/scenes/hud.gd" id="1_tdbfj"]
[ext_resource type="FontFile" uid="uid://b7acblg03funo" path="res://assets/fonts/DotGothic16-Regular.ttf" id="2_tdbfj"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_tdbfj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = 48.0
offset_top = 66.0
offset_right = 704.0
offset_bottom = 90.0
color = Color(0.5834456, 0.15593484, 0.23520347, 1)

[node name="StaminaBar" type="ColorRect" parent="."]
offset_left = 48.0
offset_top = 128.0
offset_right = 704.0
offset_bottom = 152.0
color = Color(0.3254902, 1, 0.2509804, 1)

[node name="GameOver" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -236.0
offset_right = 829.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_tdbfj")
theme_override_font_sizes/font_size = 300
text = "Game Over"
